--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -7,5 +7,22 @@
 <body>
 <h1 th:text="'List of Owners'">List of Owners...</h1>
 
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>first Name</th>
+        <th>last Name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner?.id}"></td>
+        <td th:text="${owner?.firstName}"></td>
+        <td th:text="${owner?.lastName}"></td>
+    </tr>
+    </tbody>
+</table>
+
 </body>
 </html>
